--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
         <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyB_YfZyv08gdx-1gVq2CdBwiTdmi4uyO5I"%>
         <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
         <%= csrf_meta_tags %>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <nav class="navbar navbar-default">
